--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
@@ -133,7 +133,7 @@
 \forme{
     \begin{frame}{}
         \begin{itemize}
-            \item Lemma 1 は, 可能性のあるリリースオフセット $A$ の無制限の数をチェックする必要があるため, 直接適用できない
+            \item \hlink{lemma1}{Lemma 1} は, 可能性のあるリリースオフセット $A$ の無制限の数をチェックする必要があるため, 直接適用できない
             \item 応答時間分析を実際に実装するには, 分析間隔の長さの上界と, チェックする必要があるリリースオフセット数の削減の両方が必要である
             \item この問題については, セクション 5.3 で再検討する
         \end{itemize}
