--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/evaluations.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/evaluations.tex
@@ -56,7 +56,7 @@
 \begin{frame}{評価指標}
     \begin{itemize}
         \item 各手法の受入率を比較する
-              \begin{definition}[受け入れ率]
+              \begin{definition}[受入率]
                   手法によってスケジュール可能となるタスクセットの数と, 実験におけるタスクセットの総数との比率
               \end{definition}
         \item 受入率が高いほど手法のスケジュール能力が高い
@@ -88,7 +88,7 @@
 \end{frame}
 
 \begin{frame}{予約ベースフェデレートスケジューリングとの比較}
-    提案手法は予約ベースのフェデレートスケジューリング\cite{ueter2018reservation}より明らかに優れており, $L_{i}$ が大きいほど, この差は顕著になる
+    提案手法は予約ベースのフェデレートスケジューリング\cite{ueter2018reservation}より自明に優れており, $L_{i}$ が大きいほど, この差は顕著になる
     \begin{block}{理由}
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
