--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/main.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/main.tex
@@ -25,8 +25,8 @@
 
 \maketitle
 
-% \summary{0}{0}
-% \input{abstract.tex}
+% \summary{3}{0}
+\input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
@@ -35,12 +35,11 @@
 
 % \input{prior_knowledge.tex}
 % \input{introduction.tex}
-% \input{system_model.tex}
-% \input{symbols_terms.tex}
-% \input{overview.tex}
-% \input{tasks_executed_on_active_vp.tex}
-% \input{tasks_executed_on_passive_vp.tex}
-% \input{tasks_executed_on_both.tex}
+\input{system_model.tex}
+\input{overview.tex}
+\input{tasks_executed_on_active_vp.tex}
+\input{tasks_executed_on_passive_vp.tex}
+\input{tasks_executed_on_both.tex}
 \input{resource_allocation.tex}
 % \input{evaluations.tex}
 % \input{related_work.tex}
