--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/related_work.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/related_work.tex
@@ -8,14 +8,14 @@
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
             \item 異なる重いタスクがプロセッサを他のタスクと共有可能
-            \item ただし, タスクに割り当てられるプロセッサの数に関係なく, 共有される処理能力の量は最大で 1 つのプロセッサ
+            \item しかし, タスクに割り当てられるプロセッサの数に関係なく, 共有される処理能力の量は最大で 1 つのプロセッサ
         \end{itemize}
     \end{block}
     \begin{block}{\cite{ueter2018reservation}}
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
             \item 従来のシーケンシャルタスクのためのアルゴリズムによってスケジューリングされた予約の集合に, 各タスクを割り当てる
-            \item ただし, タスクの相対的なデッドラインがその周期に近い場合, パフォーマンスの向上はわずか
+            \item しかし, タスクの相対デッドラインがその周期に近い場合, パフォーマンスの向上はわずか
         \end{itemize}
     \end{block}
 \end{frame}
