--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_both.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/tasks_executed_on_both.tex
@@ -6,7 +6,7 @@
 \begin{frame}{アクティブ/パッシブ VP両方で処理するケース}
     \begin{itemize}
         \item タスク $\tau_{i}$ をアクティブ VP グループ $\Theta$ で部分的に実行し, パッシブ VP グループで部分的に実行することも可能
-        \item タスクが実行可能なアクティブ VP とパッシブ VP を選択する順序は以下
+        \item タスクが実行可能なアクティブ VP とパッシブ VP を選択する優先度は以下
         \begin{enumerate}
             \item リーディングアクティブ VP
             \item 非リーディングアクティブ VP
@@ -45,7 +45,7 @@
 \forme{
     \begin{frame}{}
         \begin{itemize}
-            \item 最後に、定理1、2、3のスケジューラビリティテスト条件は、CiとLiに関して持続可能であることを指摘したい。つまり、あるジョブのCiと／またはLiが小さくなっても（またはあるジョブが実行時に最悪のCiと／またはLiまで実行しなくても）これらの定理の条件は、タスクのスケジューラビリティを保証するために有効であるということである。一般にDAGタスクのスケジューリングはタイミング異常、すなわちタスクが最悪負荷まで実行されたときに実際の最悪応答時間が発生するとは限らないが、定理1、2、3の持続的スケジューラビリティ試験条件を用いる場合はタイミング異常を気にする必要はない。
+            \item 最後に, Theorem1, 2, 3のスケジューラビリティテスト条件は, CiとLiに関して持続可能であることを指摘したい.すなわち, あるジョブのCiと／またはLiが小さくなっても（またはあるジョブが実行時に最悪のCiと／またはLiまで実行しなくても）これらのTheoremの条件は, タスクのスケジューラビリティを保証するために有効であるということである.一般にDAGタスクのスケジューリングはタイミング異常, すなわちタスクが最悪負荷まで実行されたときに実際の最悪応答時間が発生するとは限らないが, Theorem1, 2, 3の持続的スケジューラビリティ試験条件を用いる場合はタイミング異常を気にする必要はない.
         \end{itemize}
     \end{frame}
 }
