--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/overview.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/overview.tex
@@ -12,7 +12,6 @@
 \begin{frame}{フェデレートスケジューリングの概要}
     \begin{itemize}
         \item フェデレートスケジューリングでは, 各タスク $\tau_{i}$ に$m_{i}$個のプロセッサが割り当てられ, 排他的に実行される
-        \item $m_{i}$ は次のように計算される
 
               \begin{equation*}
                   m_{i}=\left\lceil\frac{C_{i}-L_{i}}{D_{i}-L_{i}}\right\rceil
@@ -78,9 +77,7 @@
 
 \begin{frame}{提案手法の概要}
     \begin{itemize}
-        \item 本論文では, 上記の問題を体系的に解決するために, 仮想フェデレートスケジューリングアプローチを提案する
-        \item キーとなる考え方は, 各高優先度タスクの実行を管理し, 残りの処理能力をプロセッサに制御可能に分配することで, 低優先度タスクの実行とスケジューラビリティの保証に使用できるようにすること
-        \item 各物理プロセッサ上に 1 つのアクティブ VP と 1 つのパッシブ VP の 2 つの仮想プロセッサ (VP) を構築する
-        \item 2種類の仮想プロセッサを扱えるようにフェデレートスケジューリングを一般化し, 各タスクに専用のアクティブVPまたはパッシブVPのセットを割り当て, スケジューラビリティを保証する
+        \item 各物理プロセッサ上に,  高優先度で実行される 1 つのアクティブ VP と 低優先度で実行される 1 つのパッシブ VP の 2 つの仮想プロセッサ (VP) を構築する
+        \item 2 種類の仮想プロセッサを扱えるようにフェデレートスケジューリングを一般化し, 各タスクに専用のアクティブVPまたはパッシブVPのセットを割り当て, スケジューラビリティを保証する
     \end{itemize}
 \end{frame}
