--- a/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/resource_allocation.tex
+++ b/paper/2021_RTSS_Virtually_Federated_Scheduling_of_Parallel_Real_Time_Tasks/resource_allocation.tex
@@ -97,9 +97,11 @@
 
 \begin{frame}{パッシブVPが有用である条件}
     \hlink{thorem2}{Theorem 2} と \hlink{thorem3}{Theorem 3} の条件より, パッシブ VP $\pi_{x}$ によって提供される処理能力がタスク $\tau_{j}$ にとって有用であるのは, 以下の場合である
+    \notes{有用である：スケジュール可能になりうる}
     \begin{equation*}
         \operatorname{sbf}_{\pi_{x}}\left(D_{j}\right)>L_{j}
     \end{equation*}
+
 \end{frame}
 
 \begin{frame}[label=lemma6]{Lemma 6}
